--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
                 <div style="text-align:center; font-size:300%;">
 
-                    <a href="index.html" style="color:white; text-align:left; text-shadow: 4px 4px #222222; text-decoration:none;">
+                    <a href="http://tychae.com" style="color:white; text-align:left; text-shadow: 4px 4px #222222; text-decoration:none;">
                         memes against humanity
                     </a>
 
