leave button works on the game, and cookies are perfectly managed rn, now need to add change name button to the menu

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
         </div>
         
         <div id="KungFuKenny" style="display:none">
+            <button onclick="menu();" id="leave">Leave</button>
         </div>
 
         <style>
