sometimes the computer make me want to cry

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
          Memes Against Humanity
         </title> 
         
-        <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-        <script language="javascript" type="text/javascript" src="public/Game.js"></script>
-        <script language="javascript" type="text/javascript" src="public/crazyscript.js"></script>
+        <script language="javascript" type="text/javascript" src="Game.js"></script>
+        <script language="javascript" type="text/javascript" src="crazyscript.js"></script>
 
     </head>
     
