things are broken but its okay

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">  
         
         <title> 
-         Memes Against Humanity
+         Test
         </title> 
         
         <script language="javascript" type="text/javascript" src="Game.js"></script>
@@ -19,7 +19,7 @@
                 <div style="text-align:center; font-size:300%;">
 
                     <a href="http://tychae.com" style="color:white; text-align:left; text-shadow: 4px 4px #222222; text-decoration:none;">
-                        memes against humanity
+                        test test test
                     </a>
 
                 </div>
