getting better all the time

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             </div>
             
             <div style="font-size: 100%; text-align:center; position: relative; top: 50%;">
-                <button id ="browse" class = "button buttonRed">
+                <button id ="browse" class = "button buttonRed" onmouseover="isItB();" onmouseout="isItNoB();">
                     Browse Games
                 </button>   
             </div>
