--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,9 @@
 
         </h1>
         
-        <div id="init" style="text-align:center; top:50%; padding-top: 12.5%; color:white; font-size:30px; display:none">
-            Nickname
+        <div id="init" style="text-align:center; top:50%; padding-top: 12.5%; color:white; font-size:30px; display:none; text-shadow: 2px 2px 2px black">
             <br/>
-            <input id="nick" type="text" style="width:300px; border:4px solid black" 
+            <input id="nick" placeholder="nickname" type="text" style="width:300px; border:4px solid black; text-align:left" 
             <br/>
             <br/>
             <button id="gogo" class="button buttonGo" onmouseover="isItGo();" onmouseout="isItNoGo();" onclick="getReal();">Go</button>
