--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             <div style="text-align:center; font-size:300%;">
 
                 <a href="localhost:6969" style="color:white; text-align:left; text-shadow:; text-decoration:none;">
-                    Test Test
+                    Tychae
                 </a>
 
             </div>
