--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <script language="javascript" type="text/javascript" src="memeFront.js"></script>
       <script language="javascript" type="text/javascript" src="memeGame.js"></script>
       <link rel="stylesheet" type="text/css" href="w3.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
        
 
     </head>
